# rocket-cpp

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Game.cpp  Game.h  README.md  rocket-cpp.sln
chapter1/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
chapter2/: CMakeLists.txt  main.cpp
chapter2/assets/: test.json
chapter2/src/: Actor.cpp  Actor.h  BackgroundSpriteComponent.cpp  BackgroundSpriteComponent.h  Game.cpp  Game.h  Main.cpp  Math.cpp  Math.h  Ship.h  SpriteComponent.cpp  SpriteComponent.h  actor.h
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
rocket-cpp/: rocket-cpp.vcxproj  rocket-cpp.vcxproj.filters
rocket-cpp/src/: Actor.h  AnimatedSpriteComponent.cpp  AnimatedSpriteComponent.h  BackgroundSpriteComponent.h  Component.cpp  Component.h  Game.cpp  Main.cpp  Math.cpp  Math.h  Ship.cpp  Ship.h  SpriteComponent.h
src/: Actor.cpp  Actor.h  AnimatedSpriteComponent.cpp  AnimatedSpriteComponent.h  BackgroundSpriteComponent.cpp  BackgroundSpriteComponent.h  Component.cpp  Component.h  Game.cpp  Game.h  Main.cpp  Math.cpp  Math.h  Ship.cpp  SpriteComponent.cpp
